# offboard

./: LICENSE  README.md
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
devel/include/offboard_py/: Message.h
devel/include/rospy_template/: Message.h
devel/lib/offboard_cpp/: offboard_sqr  state_subscribe
devel/lib/pkgconfig/: offboard_cpp.pc  offboard_py.pc  rospy_template.pc
devel/lib/python2.7/dist-packages/offboard_py/: __init__.py
devel/lib/python2.7/dist-packages/rospy_template/: __init__.py
devel/share/offboard_cpp/cmake/: offboard_cppConfig.cmake
devel/share/offboard_py/cmake/: offboard_py-msg-extras.cmake  offboard_py-msg-paths.cmake  offboard_pyConfig.cmake
devel/share/roseus/ros/offboard_py/: manifest.l
devel/share/rospy_template/cmake/: rospy_template-msg-paths.cmake  rospy_templateConfig.cmake
src/offboard_cpp/: CMakeLists.txt  package.xml
src/offboard_cpp/src/: offb_node_square.cpp  sqr_state_sub.cpp
src/offboard_py/: CMakeLists.txt  README.md  package.xml  setup.py
src/offboard_py/launch/: offboard_py.launch
src/offboard_py/msg/: Mission.msg  Team.msg
src/offboard_py/src/offboard_py/: offb_node_square.py  template.py
src/swarm/: CMakeLists.txt  package.xml  setup.py
src/swarm/launch/: swarm_launch.launch
src/swarm/nodes/: swarm_node.py
src/swarm/src/Swarm/: Swarm.py  buffer.py  collision_checking.py  experiments.py  integrator_system.py  mission_factory.py  missions.py  networked_info.py  offboard_py_node.py  sample  triangle_missions_decentralized.py  uav.py  utility.py
(+15 files in other folders)
